[package]
name = "Md-ECS"
description = "An ECS implementation of molecular dynamics simulation."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.7"
#bevy = { version = "0.7.0", features = ["dynamic"] }
nalgebra = { version = "0.30.1", features = ["serde-serialize"] }
rand = "0.8.3"
rand_distr = "0.4.0"
serde_json = "1.0"
serde_yaml = "0.8.9"
assert_approx_eq = "1.1.0"
csv = "1.1"
byteorder = "1.3.2"
multimap = "0.8.2"
serde_arrays = "0.1.0"
